# ctfd-pwn-college

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  add_module.py  clear_db.sh  run_sync.py  test.py
plugin/: __init__.py  config.json  models.py  pwn_college.py  sync.py
src/: ctfd.rs  db.rs  main.rs  pwncollege.rs
