[package]
name = "ctfd-pwn-college"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.54", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0"
reqwest = { version = "0.11.27", features = ["json"] }
